--- a/src/less/alert.less
+++ b/src/less/alert.less
@@ -22,14 +22,14 @@
         }
     }
     .sq-content{
-        padding: 14px;
+        padding: 16px 14px;
         text-align: center;
         .sq-title{
             font-size: 16px;
             font-weight: bold;
         }
         .sq-subtitle{
-            margin-top: 5px;
+            margin-top: 10px;
             font-size: 12px;
         }
     }
