--- a/src/less/css.less
+++ b/src/less/css.less
@@ -16,5 +16,10 @@ body{
     }
 }
 .my-image{
+    width: 140px;
+    height: 140px;
     margin-bottom: 10px;
+    &:last-child{
+        margin-right: 0;
+    }
 }
