新增表单组件

--- a/src/less/button.less
+++ b/src/less/button.less
@@ -1,4 +1,11 @@
 .sq-button{
+    display: block;
+    width: 100%;
+    user-select: none;
+    -webkit-touch-callout: none;
+    &:active{
+        opacity: .6;
+    }
     &.disabled{
         opacity: .3;
     }
