--- a/src/less/index.less
+++ b/src/less/index.less
@@ -79,6 +79,15 @@ input[disabled] {
     color: #999 !important;
 }
 
+a,
+img,
+button,
+input,
+textarea,
+div{
+	-webkit-tap-highlight-color: rgba(255,255,255, .6);
+}
+
 @import './border.less';
 @import './button.less';
 @import './toast.less';
