--- a/src/less/css.less
+++ b/src/less/css.less
@@ -23,3 +23,30 @@ body{
         margin-right: 0;
     }
 }
+.my-input{
+    display: block;
+    width: 100%;
+    height: 40px;
+    border: 1px solid #eee;
+    padding: 0 10px;
+    margin-bottom: 10px;
+}
+.my-select{
+    display: block;
+    width: 100%;
+    height: 40px;
+    border: 1px solid #eee;
+    padding: 0 10px;
+    margin-bottom: 10px;
+    border-radius: 0;
+}
+.my-textarea{
+    display: block;
+    width: 100%;
+    max-width: 100%;
+    min-width: 100%;
+    height: 140px;
+    border: 1px solid #eee;
+    padding: 10px;
+    margin-bottom: 10px;
+}
