--- a/src/less/index.less
+++ b/src/less/index.less
@@ -94,5 +94,6 @@ div{
 @import './alert.less';
 @import './image.less';
 @import './loading.less';
+@import './select.less';
 // 常规样式
 @import './css.less';
