--- a/src/less/select.less
+++ b/src/less/select.less
@@ -76,6 +76,7 @@
     justify-content: center;
     position: absolute;
     opacity: 0;
+    transition: all .1s;
 }
 .sq-select-active{
     width: 100%;
