--- a/src/less/select.less
+++ b/src/less/select.less
@@ -58,7 +58,7 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 36px;
+    height: 40px;
     position: absolute;
     top: 50%;
     margin-top: -18px;
@@ -67,10 +67,11 @@
 }
 .sq-select-list-item{
     padding: 5px;
-    font-size: 16px;
+    font-size: 14px;
     color: #333;
     width: 100%;
     height: 100%;
+    text-align: center;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -80,7 +81,7 @@
 }
 .sq-select-active{
     width: 100%;
-    height: 36px;
+    height: 40px;
     position: absolute;
     top: 50%;
     margin-top: -18px;
