--- a/src/less/select.less
+++ b/src/less/select.less
@@ -41,17 +41,24 @@
     left: 0;
     right: 0;
     bottom: 0;
-    height: 250px;
+    height: 240px;
     background-color: #fff;
     z-index: 10;
     transform: 100%;
     animation: active .25s both;
     display: flex;
+    flex-direction: column;
+    .sq-list{
+        display: flex;
+        width: 100%;
+        flex: 1;
+    }
 }
 .sq-select-list{
     flex: 1;
     display: flex;
     position: relative;
+    background-color: #ddd;
 }
 .sq-select-list-items{
     flex: 1;
@@ -85,4 +92,40 @@
     position: absolute;
     top: 50%;
     margin-top: -18px;
+    &::before{
+        border-top: 1px solid rgba(0,0,0,.1);
+    }
+    &::after{
+        border-bottom: 1px solid rgba(0,0,0,.1);
+    }
+}
+.sq-select-head{
+    display: flex;
+    height: 40px;
+    padding: 5px 10px;
+    background-color: #eee;
+    .sq-select-head-btn{
+        height: 28px;
+        width: 48px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 14px;
+        border-radius: 2px;
+        background-color: #fff;
+        &::after{
+            border-radius: 2px;
+        }
+        &.active{
+            background-color: #f53;
+            color: #fff;
+        }
+    }
+    .sq-select-head-title{
+        flex: 1;
+        font-size: 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
 }
