--- a/src/less/button.less
+++ b/src/less/button.less
@@ -1,4 +1,4 @@
-.sq-button{
+.button{
     display: block;
     width: 100%;
     user-select: none;
@@ -6,7 +6,7 @@
     &:active{
         opacity: .6;
     }
-    &.disabled{
-        opacity: .3;
-    }
+}
+.disabled{
+    opacity: .3;
 }
