--- a/src/less/toast.less
+++ b/src/less/toast.less
@@ -1,4 +1,4 @@
-.sq-toast{
+.toast{
     position: fixed;
     border-radius: 4px;
     left: 50%;
@@ -7,12 +7,13 @@
     transform: translate(-50%, -50%);
     background-color: rgba(0, 0, 0, .6);
     z-index: 99;
-    transition: transform .2s;
-    .sq-text{
-        color: #fff;
-        font-size: 14px;
-    }
-    &.hide{
-        transform: translate(-50%, -50%) scale(.8);
-    }
+    opacity: 1;
+    transition: opacity .2s;
+}
+.text{
+    color: #fff;
+    font-size: 14px;
+}
+.hide{
+    opacity: 0;
 }
