--- a/src/less/css.less
+++ b/src/less/css.less
@@ -5,7 +5,7 @@ body{
     padding: 20px;
     max-width: 414px;
 }
-.my-btn{
+.btn{
     text-align: center;
     margin-bottom: 10px;
     padding: 10px 20px;
@@ -15,7 +15,7 @@ body{
         border-color: #f50;
     }
 }
-.my-image{
+.image{
     width: 140px;
     height: 140px;
     margin-bottom: 10px;
@@ -23,7 +23,7 @@ body{
         margin-right: 0;
     }
 }
-.my-input{
+.input{
     display: block;
     width: 100%;
     height: 40px;
@@ -31,7 +31,7 @@ body{
     padding: 0 10px;
     margin-bottom: 10px;
 }
-.my-select{
+.select{
     display: flex;
     align-items: center;
     font-size: 14px;
@@ -41,11 +41,11 @@ body{
     padding: 0 10px;
     margin-bottom: 10px;
     border-radius: 0;
-    &.default{
+    &.defaultValue{
         color: #999;
     }
 }
-.my-textarea{
+.textarea{
     display: block;
     width: 100%;
     max-width: 100%;
