--- a/src/less/loading.less
+++ b/src/less/loading.less
@@ -6,7 +6,7 @@
         transform: rotate(1turn);
     }
 }
-.sq-loading{
+.loading{
     position: fixed;
     left: 0;
     right: 0;
@@ -16,30 +16,31 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    .sq-loading-box{
-        width: 90px;
-        height: 90px;
-        color: #fff;
-        background-color: rgba(0,0,0, .6);
-        border-radius: 10px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        font-size: 28px;
-        margin-top: -80px;
-    }
-    .sq-loading-icon{
-        width: 30px;
-        height: 30px;
-        animation: loadingPng 1s steps(12) infinite;
-        background: url('../images/loading.png') center no-repeat;
-        background-size: contain;
-        font-size: 0;
-    }
-    .sq-loading-text{
-        margin-top: 10px;
-        font-size: 12px;
-        color: rgba(255, 255, 255, .9);
-    }
+    
+}
+.box{
+    width: 90px;
+    height: 90px;
+    color: #fff;
+    background-color: rgba(0,0,0, .6);
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: 28px;
+    margin-top: -80px;
+}
+.icon{
+    width: 30px;
+    height: 30px;
+    animation: loadingPng 1s steps(12) infinite;
+    background: url('../images/loading.png') center no-repeat;
+    background-size: contain;
+    font-size: 0;
+}
+.text{
+    margin-top: 10px;
+    font-size: 12px;
+    color: rgba(255, 255, 255, .9);
 }
